Fixed filters panel being hidden by the navigation bar

--- a/ituran-dataran/src/components/MainPage/pages/dashboards/style.css
+++ b/ituran-dataran/src/components/MainPage/pages/dashboards/style.css
@@ -7,6 +7,8 @@
 .iframe-content {
     position: fixed;
     height: 100vh;
-    width: 100%;
+    width: 98%;
     border: 0px;
+    margin-left: 1%;
+    margin-right: 1%;
 }
